--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
       <div id="back" class="album">
 
         <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
-        
+        <h3> "FROM DESPICABLE ME" </h3>
         <!-- Level 1 'HAPPY' Header -->
-
+        <h1> "HAPPY" </h1>
         <!-- Level 3 'WRITTEN BY...' Header -->
-
+        <h3> "WRITTEN BY" </h3>
         <!-- pararaph text 'PUBLISHED BY...' -->
-
+        <p> "PHARRELLWILLIAMS.COM"
         <!-- span text 'PHARRELLWILLIAMS.COM' -->
-
+        <img src= "https://s3.amazonaws.com/learn-verified/columbia-logo.png">
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
-
+        "COLUMBIARECORDS.COM" <P>
         <!-- span text 'COLUMBIARECORDS.COM' -->
 
         <br>
-        
+
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
 
       </div>
