--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         <!-- span text 'COLUMBIARECORDS.COM' -->
 
         <br>
-
+        <img src= "https://s3.amazonaws.com/learn-verified/sony-logo.png">
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
-
+       
       </div>
     </div>
   </body>
